# eunice

./: .gitignore  README.md  pyproject.toml  setup.cfg
eunice/: raw.py
eunice/data/: euclid_nisp_detector_offsets.csv
