[metadata]
name = eunice
description = Euclid processing experiments
author = G. Brammer
author_email = gbrammer@gmail.com
license = MIT
url = http://github.com/gbrammer/sregion
edit_on_github = False
github_project = gbrammer/eunice
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/gbrammer/eunice
    Tracker = https://github.com/gbrammer/eunice/issues

[options]
python_requires = >=3.6
install_requires = 
    numpy
    astropy
    grizli
    scipy
    matplotlib
    
packages = find:
include_package_data = True

[options.package_data]
eunice.data =
    *.yml
    *.txt
    *.fits
    *.fits.gz
    *.csv


[options.extras_require]
test =
    pytest>=5.1
    flake8
    
[tool:pytest]
minversion = 3.0
doctest_plus = enabled
addopts = -p no:warnings
testpaths = eunice/tests

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[entry_points]
astropy-package-template-example = packagename.example_mod:main

